--- a/gb/19/8/16/n11458202.md
+++ b/gb/19/8/16/n11458202.md
@@ -1,51 +1,53 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/liczai2340/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/liczai2340/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/liczai2340/fq/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/liczai2340/ntdtv/blob/master/gb/prog1530_1.md#1">ºÍÆ½¿¹Òé</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/liczai2340/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>ÂéÖÝ³öÏÖÈËÀà¸ÐÈ¾¶«²¿ÂíÄÔÑ×</h2>
-
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/10a.jpg" title="ç‹¬å®¶"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/12a.jpg" title="å¤´æ¡"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/vkwknd3513/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/vkwknd3513/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/vkwknd3513/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>éº»å·žå‡ºçŽ°äººç±»æ„ŸæŸ“ä¸œéƒ¨é©¬è„‘ç‚Ž</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/07/0701_25-320x200.jpg" />
 <h6></h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê08ÔÂ16ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÂ¬è´±àÒë±¨µ¼£©<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E9%BA%BB%E5%B7%9E.md">ÂéÖÝ</a>¹«¹²ÎÀÉú²¿8ÔÂ10ÈÕÐû²¼£¬Ò»ÃûÂéÖÝÄÐ×Ó±»Õï¶Ï¸ÐÈ¾ÁË¶«²¿<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E9%A9%AC%E8%84%91%E7%82%8E.md">ÂíÄÔÑ×</a>²¡¶¾(Eastern Equine Encephalitis£¬¼ò³ÆEEE)¡£Äê¹ý60µÄ»¼ÕßÀ´×ÔÄÏ²¿µÄÆÕÀûÃ©Ë¹ÏØ¡£ÕâÊÇ<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E9%BA%BB%E5%B7%9E.md">ÂéÖÝ</a>×Ô2013ÄêÒÔÀ´µÚÒ»Àý<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E4%BA%BA%E7%B1%BB.md">ÈËÀà</a>¸ÐÈ¾¶«²¿ÂíÄÔÑ×µÄ²¡Àý¡£</p>
-<p>Îª´Ë£¬¹ÙÔ±½«ÒÔÏÂ9¸öÉçÇøµÄ·çÏÕµÈ¼¶ÌáÉýÎª¡°Î£¼±¡±£ºCarver£¬Lakeville£¬Marion£¬Middleborough£¬RochesterºÍÆÕÀûÃ©Ë¹ÏØµÄWarehamÒÔ¼°²¼ÀïË¹ÍÐ¶û(Bristol)ÏØµÄAcushnet£¬FreetownºÍNew Bedford¡£</p>
-<p>Õâ9¸öÏØÒÑ¿ªÊ¼ÏÞÖÆ»§Íâ»î¶¯£¬ÀýÈçÈ¡Ïû»§ÍâÒôÀÖ»áµÈ¡£</p>
-<p>´ËÍâ£¬¹«¹²ÎÀÉú²¿»¹È·¶¨£¬ÂéÖÝ¶«ÄÏ²¿µÄ15¸öÉçÇø´¦ÓÚ¸ß·çÏÕÖÐ£¬ÁíÍâ18¸öÉçÇøÎªÖÐµÈ·çÏÕ¡£</p>
-<p>¶«²¿<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E9%A9%AC%E8%84%91%E7%82%8E.md">ÂíÄÔÑ×</a>×îÔçÓÚ1831Äê³öÏÖÔÚÂéÖÝ£¬³£Í¨¹ýÎÃ×Ó´«²¥£¬ÊÇÒ»ÖÖº±¼ûµ«ÑÏÖØµÄ¼²²¡£¬ÉõÖÁ¿ÉÄÜÖÂÃü¡£¸Ã²¡¶¾¿ÉÓ°ÏìËùÓÐÄêÁä¶ÎµÄÈË¡£Ö¢×´°üÀ¨·¢ÉÕ¡¢Í·Í´¡¢¾±²¿½©Ó²ºÍºíÁüÍ´¡£ÂéÖÝ×î½üµÄ±¬·¢ÆÚÎª2004-2006¼°2010-2012¡£ÔÚÕâÁ½¸öÊ±ÆÚÄÚ£¬ÓÐ22Àý<a href="https://github.com/liczai2340/djy/blob/master/gb/tag/%E4%BA%BA%E7%B1%BB.md">ÈËÀà</a>¸ÐÈ¾¸Ã²¡¶¾µÄ²¡Àý£¬ÆäÖÐ14Àý·¢ÉúÔÚ²¼ÀïË¹ÍÐ¶ûÏØºÍÆÕÀûÃ©Ë¹ÏØ¡£</p>
-<p>±¾ÖÜ£¬¹«¹²ÎÀÉú²¿ºÍÂéÖÝÅ©Òµ×ÊÔ´²¿(MDAR)Ðû²¼£¬ËûÃÇ½«ÔÚ²¼ÀïË¹ÍÐ¶ûÏØºÍÆÕÀûÃ©Ë¹ÏØµÄÌØ¶¨µØÇø¿ÕÖÐÅçÈ÷ÃðÎÃÒ©¼Á¡£¿ÕÖÐÅçÈ÷´Ó8ÔÂ15ÈÕ¿ªÊ¼£¬Ô¤¼Æ½«ÔÚÕû¸öÖÜÄ©Ò¹¼ä³ÖÐø½øÐÐ¡£</p>
-<p>ÎÀÉú¹ÙÔ±±íÊ¾£¬ËäÈ»ÅçÒ©ÄÜ½µµÍ»¼²¡·çÏÕ£¬µ«ÎÞ·¨ÍêÈ«Ïû³ýËü¡£¹«¹²ÎÀÉú²¿¶Ø´Ù¾ÓÃñ²ÉÈ¡´ëÊ©±ÜÃâÎÃ³æ¶£Ò§£¬·ÀÖ¹ÎÃ³æ½øÈë¼ÒÖÐ£¬ÒÔ¼°±£»¤ºÃ³èÎï¡£½ñÄê£¬ÒÑÓÐ232ÖÖÎÃ×ÓÑù±¾ÖÐ³öÏÖ¶«²¿ÂíÄÔÑ×²¡¶¾£¬ÆäÖÐÓÐ¶àÖÖÎÃ×Ó¿ÉÒÔ°ÑÕâÖÖ²¡¶¾´«²¥¸øÈËÀà¡£¡ó</p>
-<p>ÔðÈÎ±à¼­£º¾°ìÇ</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´08æœˆ16æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…å¢ç’ç¼–è¯‘æŠ¥å¯¼ï¼‰<ahref="https://github.com/vkwknd3513/djy/blob/master/gb/tag/%E9%BA%BB%E5%B7%9E.md#1">éº»å·ž</a>å…¬å…±å«ç”Ÿéƒ¨8æœˆ10æ—¥å®£å¸ƒï¼Œä¸€åéº»å·žç”·å­è¢«è¯Šæ–­æ„ŸæŸ“äº†ä¸œéƒ¨<ahref="https://github.com/vkwknd3513/djy/blob/master/gb/tag/%E9%A9%AC%E8%84%91%E7%82%8E.md#1">é©¬è„‘ç‚Ž</a>ç—…æ¯’(Eastern Equine Encephalitisï¼Œç®€ç§°EEE)ã€‚å¹´è¿‡60çš„æ‚£è€…æ¥è‡ªå—éƒ¨çš„æ™®åˆ©èŒ…æ–¯åŽ¿ã€‚è¿™æ˜¯<ahref="https://github.com/vkwknd3513/djy/blob/master/gb/tag/%E9%BA%BB%E5%B7%9E.md#1">éº»å·ž</a>è‡ª2013å¹´ä»¥æ¥ç¬¬ä¸€ä¾‹<ahref="https://github.com/vkwknd3513/djy/blob/master/gb/tag/%E4%BA%BA%E7%B1%BB.md#1">äººç±»</a>æ„ŸæŸ“ä¸œéƒ¨é©¬è„‘ç‚Žçš„ç—…ä¾‹ã€‚</p>
+<p>ä¸ºæ­¤ï¼Œå®˜å‘˜å°†ä»¥ä¸‹9ä¸ªç¤¾åŒºçš„é£Žé™©ç­‰çº§æå‡ä¸ºâ€œå±æ€¥â€ï¼šCarverï¼ŒLakevilleï¼ŒMarionï¼ŒMiddleboroughï¼ŒRochesterå’Œæ™®åˆ©èŒ…æ–¯åŽ¿çš„Warehamä»¥åŠå¸ƒé‡Œæ–¯æ‰˜å°”(Bristol)åŽ¿çš„Acushnetï¼ŒFreetownå’ŒNew Bedfordã€‚</p>
+<p>è¿™9ä¸ªåŽ¿å·²å¼€å§‹é™åˆ¶æˆ·å¤–æ´»åŠ¨ï¼Œä¾‹å¦‚å–æ¶ˆæˆ·å¤–éŸ³ä¹ä¼šç­‰ã€‚</p>
+<p>æ­¤å¤–ï¼Œå…¬å…±å«ç”Ÿéƒ¨è¿˜ç¡®å®šï¼Œéº»å·žä¸œå—éƒ¨çš„15ä¸ªç¤¾åŒºå¤„äºŽé«˜é£Žé™©ä¸­ï¼Œå¦å¤–18ä¸ªç¤¾åŒºä¸ºä¸­ç­‰é£Žé™©ã€‚</p>
+<p>ä¸œéƒ¨<ahref="https://github.com/vkwknd3513/djy/blob/master/gb/tag/%E9%A9%AC%E8%84%91%E7%82%8E.md#1">é©¬è„‘ç‚Ž</a>æœ€æ—©äºŽ1831å¹´å‡ºçŽ°åœ¨éº»å·žï¼Œå¸¸é€šè¿‡èšŠå­ä¼ æ’­ï¼Œæ˜¯ä¸€ç§ç½•è§ä½†ä¸¥é‡çš„ç–¾ç—…ï¼Œç”šè‡³å¯èƒ½è‡´å‘½ã€‚è¯¥ç—…æ¯’å¯å½±å“æ‰€æœ‰å¹´é¾„æ®µçš„äººã€‚ç—‡çŠ¶åŒ…æ‹¬å‘çƒ§ã€å¤´ç—›ã€é¢ˆéƒ¨åƒµç¡¬å’Œå–‰å’™ç—›ã€‚éº»å·žæœ€è¿‘çš„çˆ†å‘æœŸä¸º2004-2006åŠ2010-2012ã€‚åœ¨è¿™ä¸¤ä¸ªæ—¶æœŸå†…ï¼Œæœ‰22ä¾‹<ahref="https://github.com/vkwknd3513/djy/blob/master/gb/tag/%E4%BA%BA%E7%B1%BB.md#1">äººç±»</a>æ„ŸæŸ“è¯¥ç—…æ¯’çš„ç—…ä¾‹ï¼Œå…¶ä¸­14ä¾‹å‘ç”Ÿåœ¨å¸ƒé‡Œæ–¯æ‰˜å°”åŽ¿å’Œæ™®åˆ©èŒ…æ–¯åŽ¿ã€‚</p>
+<p>æœ¬å‘¨ï¼Œå…¬å…±å«ç”Ÿéƒ¨å’Œéº»å·žå†œä¸šèµ„æºéƒ¨(MDAR)å®£å¸ƒï¼Œä»–ä»¬å°†åœ¨å¸ƒé‡Œæ–¯æ‰˜å°”åŽ¿å’Œæ™®åˆ©èŒ…æ–¯åŽ¿çš„ç‰¹å®šåœ°åŒºç©ºä¸­å–·æ´’ç­èšŠè¯å‰‚ã€‚ç©ºä¸­å–·æ´’ä»Ž8æœˆ15æ—¥å¼€å§‹ï¼Œé¢„è®¡å°†åœ¨æ•´ä¸ªå‘¨æœ«å¤œé—´æŒç»­è¿›è¡Œã€‚</p>
+<p>å«ç”Ÿå®˜å‘˜è¡¨ç¤ºï¼Œè™½ç„¶å–·è¯èƒ½é™ä½Žæ‚£ç—…é£Žé™©ï¼Œä½†æ— æ³•å®Œå…¨æ¶ˆé™¤å®ƒã€‚å…¬å…±å«ç”Ÿéƒ¨æ•¦ä¿ƒå±…æ°‘é‡‡å–æŽªæ–½é¿å…èšŠè™«å®å’¬ï¼Œé˜²æ­¢èšŠè™«è¿›å…¥å®¶ä¸­ï¼Œä»¥åŠä¿æŠ¤å¥½å® ç‰©ã€‚ä»Šå¹´ï¼Œå·²æœ‰232ç§èšŠå­æ ·æœ¬ä¸­å‡ºçŽ°ä¸œéƒ¨é©¬è„‘ç‚Žç—…æ¯’ï¼Œå…¶ä¸­æœ‰å¤šç§èšŠå­å¯ä»¥æŠŠè¿™ç§ç—…æ¯’ä¼ æ’­ç»™äººç±»ã€‚â—‡</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæ™¯çƒ¨</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/8/16/n11458202.htm">ÂéÖÝ³öÏÖÈËÀà¸ÐÈ¾¶«²¿ÂíÄÔÑ×</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/18/9/15/n10717069.htm">ÇÇÖÝ±¬7ÀýÎ÷ÄáÂÞÈÈÒ»ÈËËÀÍö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/9/9/n8281615.htm">±±¿¨¾üÊÂ»ùµØ5ÈË¸ÐÈ¾×È¿¨²¡¶¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/8/12/n4502053.htm">ÏÄ¼¾Ó¦·ÀÎÃ£ºÂíÖÝÎÃ×ÓÐ®´øÎ÷ÄáÂÞºÓ²¡¶¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/8/11/3/n2318238.htm">ÂéÖÝÒ»ÈËËÀÓÚ¶«·½ÂíÄÔÑ×</a></li>
-> <li><a href="http://www.epochtimes.com/gb/4/12/30/n764414.htm">°ÍÄÃÂí·¢ÏÖËÄ¼þÂíÄÔÑ×²¡Àý</a></li>
-> <li><a href="http://www.epochtimes.com/gb/3/7/14/n342356.htm">ÄÏÎ¬ÖÝ³öÏÖ¡°¶«²¿ÂíÄÔÑ×¡±²¡Ã½ÎÃ  »¼ÕßËÀÍöÂÊ¸ß´ïÎå³É</a></li>
-> <li><a href="http://www.epochtimes.com/gb/3/7/13/n342108.htm">¡°¶«²¿ÂíÄÔÑ×¡±¶áÃÀ¶«ÄÏÄÐ×ÓÐÔÃü  ²¡Ã½ÎÃÕýÑØ¶«°¶Ïò±±ÈëÇÖ</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/8/15/n11456002.htm">¸¶¹úºÀ×¡¹ú°²²¿¼¯ÌåËÞÉá£¿¹Ù·½Ðû´«Í»½µÎÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/15/n11456046.htm">²©¶û¶Ù£ºÖÐ¹²ÈôÕòÑ¹Ïã¸Û ½«ÒýÃÀ¹ú»á±¬Õ¨ÐÔ·´Ó¦</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/15/n11455872.htm">Ï°½üÆ½·¢ÉùÀõÕ½ÊéÂ¶Ãæ ±±´÷ºÓ»áÒéÁÏ½áÊø</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/15/n11455926.htm">ÊÓÆµ£º¸¶¹úºÀ±»´òÈ«³Ì»¹Ô­ ºúÎý½øÓÖºúËµ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/5/n11432842.htm">¡¾ÏÍºó´«¡¿·¼Äê±ÀÊÅ ÈÃ¿µÎõÉîÇéÃå»³µÄÅ®ÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/6/4/n7964805.htm">¡¾ÎÄÊ·¡¿ÓÀÀÖ´óµÛ¿ª½®ÍØÍÁ ÄÒÀ¨¿âÒ³µº(ÉÏ)</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/7/n11437984.htm">²»Ì°ÃÀÉ«·´³ö×Ê¼ÞÅ®ÆÍ ÌÆÈË»ýÒõµÂÑÓÊÙ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/26/n11411971.htm">ÐÞÐÄÐÞ¿Ú ×Ô»áÔ¶ÀëÔÖ»ö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/14/n11452021.htm">¡°½ðÈÚ·´ÖÆ¡±ÍøÃñ·¢ÆðÏã¸Û8?16ÒøÐÐ´ó¼·¶Ò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/14/n11451590.htm">ÒøºÓÏµÖÐÐÄÍ»ÏÖ³¬Ç¿±¬·¢ ¿ÆÑ§¼ÒÕð¾ª</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/14/n11452918.htm">ÃÀÍË³ö·Éµ¯ÌõÔ¼ ·ÖÎö£ºÖÐ¹²ÎäÍ³ÄÑ¶È´óÔö</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/15/n11455644.htm">¡¾ÐÂÎÅ¿´µã¡¿ÖÐ¹²¼ÙÐÂÎÅÉ¿¶¯ Â½ÃñÎó½âÏã¸ÛÈË</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/14/n11453360.htm">¡¾ÐÂÎÅ¿´µã¡¿Êý¾ÝÒ»Æ¬»Ò°µ ÖÐ¹ú¾­¼ÃÔÙÏÖÆ£Ì¬</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/13/n11451051.htm">¡¾ÐÂÎÅ¿´µã¡¿Ã³Ò×Õ½ËÄ´ó³å»÷ ÆØÖÐ¹ú¾­¼Ã´àÈõ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/14/n11453118.htm">Å­³âÌØÊ×ÁÖÖ£ ¸èÊÖ¹ØÊçâùÉúÈÕ¸ÐÑÔ»ñ¿äÔÞ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/13/n11451146.htm">ÁÖÖ£¼ÇÕß»áÓï´ø¿ÞÇ» ¶ÅãëÔó¸ãÐ¦Ö§ÕÐÈçºÎ´ßÀá</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/13/n11451432.htm">ÒÉÒòÎ´×ªÇ×¹²Ìû Ö£ÖÐ»ù¹ãÖÝÑÝ³ª»áÐû²¼ÑÓÆÚ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/14/n11452119.htm">Ì¨Ã½¸°¸Û²É·Ã¡°·´ËÍÖÐ¡± Ôâ¸Û¾¯ÎÞ²î±ð¹¥»÷</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/8/13/n11450875.htm">Ì¨µ¼ÑÝÑîÑÅ†´³â¸Û¾¯±©ÐÐ£ºÓÐ¿¼ÂÇÈËÃñËÀ»îÂð</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/3/7/13/n342108.md#1">â€œä¸œéƒ¨é©¬è„‘ç‚Žâ€å¤ºç¾Žä¸œå—ç”·å­æ€§å‘½  ç—…åª’èšŠæ­£æ²¿ä¸œå²¸å‘åŒ—å…¥ä¾µ</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/3/7/14/n342356.md#1">å—ç»´å·žå‡ºçŽ°â€œä¸œéƒ¨é©¬è„‘ç‚Žâ€ç—…åª’èšŠ  æ‚£è€…æ­»äº¡çŽ‡é«˜è¾¾äº”æˆ</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/4/12/30/n764414.md#1">å·´æ‹¿é©¬å‘çŽ°å››ä»¶é©¬è„‘ç‚Žç—…ä¾‹</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/8/11/3/n2318238.md#1">éº»å·žä¸€äººæ­»äºŽä¸œæ–¹é©¬è„‘ç‚Ž</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/liczai2340/djy/blob/master/gb/19/8/16/n11458202.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/liczai2340/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/liczai2340/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/liczai2340/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/liczai2340/fq/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/liczai2340/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/24/n10082527.md#1" target="_blank">è°¢æ³³ï¼šå¶ä¼å­™é¥¶æ¯“æ³°çš„æ­»</a></li><li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/21/n11886559.md#1" target="_blank">ä¿®ç‚¼â€œçœŸå–„å¿â€åŒ–è§£å®¶åº­æ©æ€¨çš„å¾·å›½äºº</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12240778.md#1">æ—¥ç±å¥³ç”ŸæŸ“ç–« å°æ¹¾é‡‡æ£€213äººæŠ—ä½“ ç»“æžœå‡ºç‚‰</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/7/n12239553.md#1">è´µå·žå¤§å·´21æ­» ä¼ å¸æœºæ˜¯é€€ä¼å†›äººã€æ‹†è¿æˆ·</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/3/n12231462.md#1">ã€ç‹¬å®¶ã€‘ä¹ è¿‘å¹³æ€¯æ­¥å†›è¥çš„èƒŒåŽ</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/7/n12238373.md#1">ã€ä¸€çº¿é‡‡è®¿ã€‘è´µå·žé«˜è€ƒå¤§å·´å æ°´è‡³å°‘21æ­»</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/7/n12239450.md#1">FBIååœ¨ç¾ŽåŽäººï¼šå¦‚è¢«å¼ºè¿«å›žå›½ å‘ç¾Žå›½æŠ¥å‘Š</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/6/n12236320.md#1">60å²æ¨è´µåªšæ™•çœ©å‘ä½œ åè½®æ¤…å°±åŒ»æ£€æŸ¥</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/6/n12237412.md#1">æ”¶6å²å¥³å„¿é€çŽ«ç‘°èŠ±èŒ¶ å­™ä¿ªç›´å‘¼èˆä¸å¾—å–</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/6/n12236838.md#1">æµ™æ±Ÿå«è§†é«˜ç®¡çˆ†å·¨é¢å—è´¿ å‘¨å†¬é›¨å—ç‰µè¿žæŒ¨è½°</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/5/n12234872.md#1">TVBç¥­åŠ è¾£æ¡æ¬¾ éƒ‘æ•¬åŸºï¼šå‰æ‰€æœªæœ‰çš„ç™½è‰²ææ€–</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/7/n12239433.md#1">å¤å‡ºä¸é¡ºè½¬å½“ç½‘çº¢ï¼ŸèŒƒå†°å†°æŠ–éŸ³æ˜µç§°å¼•çƒ­è®®</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/6/n12237076.md#1">å¼ºåˆ¶äº”ä¸ªå­©å­æˆ’â€œç½‘ç˜¾â€ ç»“æžœéœ‡æƒŠå¦ˆå¦ˆ</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/4/23/n12056338.md#1">æ¸…æœä¸–ç•Œé¦–å¯Œä¼ç§‰é‰´ ç¼”é€ æ¬§ç¾Žå•†ç•Œä¼ è¯´</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/2/n12227327.md#1">1972å¹´è’‹ç»å›½å‘è¡¨ã€Šåå…±å¤å›½çš„æ€»ç›®æ ‡ç»ä¸æ”¹å˜ã€‹</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/5/27/n12141489.md#1">ã€åº·ç†™å¤§å¸ã€‘è¿œèµ´æœ”æ¼  ä¸‰å¾è‘›å°”ä¸¹</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/3/n12230158.md#1">ç»˜ç”»ä¸­çš„ç˜Ÿç–«â€”â€”ç½ªä¸Žç½šçš„æ•…äº‹ï¼ˆä¸€ï¼‰</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/vkwknd3513/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/vkwknd3513/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/8/16/n11458202.htm">éº»å·žå‡ºçŽ°äººç±»æ„ŸæŸ“ä¸œéƒ¨é©¬è„‘ç‚Ž</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/vkwknd3513/djy/blob/master/gb/19/8/16/n11458202.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/vkwknd3513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/vkwknd3513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/vkwknd3513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
